# nineties

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  README.md  REVIEW.md  docker-compose.test.yml  docker-compose.yml  justfile
.github/workflows/: ci.yml
docs/: setup.md
fixtures/catalog/: README.md  generate.py
librarian/: Dockerfile  conftest.py  pyproject.toml
librarian/catalog/: apps.py  models.py
librarian/kids/: apps.py  models.py
librarian/kids/migrations/: 0001_initial.py
librarian/librarian/: asgi.py  settings.py  urls.py  wsgi.py
librarian/loans/: apps.py  models.py
librarian/loans/migrations/: 0001_initial.py
librarian/media/: abs.py  apps.py  backend.py  models.py
librarian/policy/: apps.py  models.py
librarian/tests/features/: kid_checks_out_book.feature
librarian/tests/steps/: test_kid_checks_out_book.py
librarian/tests/unit/: test_scaffold.py
librarian/voice/: adapter.py  apps.py  models.py
librarian/voice/alexa/: __init__.py  adapter.py
plans/: 0001-v0.1.0-audiobook-library.md  index.md
requirements/: accessibility.md  index.md  license-posture.md  privacy.md  safety.md
