[project]
name = "librarian"
version = "0.1.0"
description = "Curation, scarcity, and scheduling layer for the Nineties project."
readme = "../README.md"
requires-python = ">=3.14,<3.15"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Mike Steder", email = "steder@gmail.com" }]

dependencies = [
    # Web framework + DB
    "Django>=5.2,<6.0",
    "psycopg[binary]>=3.2,<4.0",
    "pgvector>=0.3,<1.0",
    "django-environ>=0.11,<1.0",
    # Typed JSON API surface (used selectively; admin handles most of v1)
    "django-ninja>=1.3,<2.0",
    # Background jobs (single-process, no Redis dep)
    "django-q2>=1.7,<2.0",
    # Voice adapter — Alexa custom skill
    "ask-sdk-core>=1.19,<2.0",
    # HTTP client for media backend (AudioBookShelf)
    "httpx>=0.27,<1.0",
    # WSGI/ASGI server for the dev container (also used by Caddy upstream)
    "uvicorn[standard]>=0.32,<1.0",
]

[dependency-groups]
dev = [
    # Lint / format / types
    "ruff>=0.7,<1.0",
    "pyright>=1.1.380",
    "django-stubs>=5.1,<6.0",
    # Tests — see CLAUDE.md / plans/0001 for the layered strategy
    # pytest pinned >=9.0.3 to address GHSA-6w46-j5rx-g56g (tmpdir handling).
    "pytest>=9.0.3,<10.0",
    "pytest-django>=4.9,<5.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-bdd>=8.0,<10.0",
    "pytest-playwright>=0.5,<1.0",
    "hypothesis>=6.115,<7.0",
    "factory-boy>=3.3,<4.0",
    "syrupy>=5.0,<6.0",
    "testcontainers[postgres]>=4.8,<5.0",
    # Pre-commit hooks
    "pre-commit>=4.0,<5.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

# --- Ruff ---

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["."]
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle, pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade
    "DJ",           # flake8-django
    "RUF",          # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"

# --- Pyright ---

[tool.pyright]
include = ["catalog", "kids", "loans", "policy", "voice", "media", "librarian", "tests", "conftest.py"]
exclude = ["**/__pycache__", "**/migrations", ".venv", "**/node_modules", ".pytest_cache"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
stubPath = ".pyright/stubs"

# --- Pytest ---

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "librarian.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "smoke: fast happy-path tests",
    "property: Hypothesis-driven property tests on invariants",
    "bdd: pytest-bdd Gherkin user-journey scenarios",
    "e2e: end-to-end tests requiring a running stack (Alexa replay + Playwright)",
    "slow: tests that take more than a few seconds",
]
asyncio_mode = "strict"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:django",
    # pytest-asyncio 0.26 calls asyncio.get_event_loop_policy which is
    # deprecated in Python 3.14. Drop this filter when pytest-asyncio updates.
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore:.*get_event_loop_policy.*:DeprecationWarning",
]

# --- Django stubs ---

[tool.django-stubs]
django_settings_module = "librarian.settings"
